# understanding-software-dynamics

./: .gitignore  CMakeLists.txt  README.md
chapters/: CMakeLists.txt
chapters/chapter1/: CMakeLists.txt
chapters/chapter1/section1/: CMakeLists.txt  main.c  snippet1.c  snippet1.h
cmake/toolchains/: aarch64.cmake  x86_64.cmake
include/performancecounters/: event_counter.h  instrumentation.h
my_c_project/: CMakeLists.txt  README.md
my_c_project/include/: snippet1.h
my_c_project/src/: main.c
scripts/: build-linux.sh  build-mac-aarch64.sh
src/: CMakeLists.txt  instrumentation.cpp  mystery0.c  mystery0.cpp  mystery0_unroll.c  mystery0_unroll2.c  mystery0_unroll2_sums.c
src/instrumentation/: instrumentation.cpp  instrumentation.h
