cmake_minimum_required(VERSION 3.10)
project(MyCProject VERSION 1.0 LANGUAGES C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)

add_subdirectory(chapters ${CMAKE_BINARY_DIR}/chapters_build)
cmake_minimum_required(VERSION 3.10)
project(MyCProject VERSION 1.0 LANGUAGES C)

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED True)

add_subdirectory(chapters ${CMAKE_BINARY_DIR}/chapters_build)
